--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "next": "14.1.0",
-    "prettier": "^3.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "saas": "^1.0.0",
-    "sass": "^1.70.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +26,9 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "saas": "^1.0.0",
+    "sass": "^1.70.0",
+    "prettier": "^3.2.4"
   }
 }
